--- a/ia/pandas.html
+++ b/ia/pandas.html
@@ -58,7 +58,7 @@
                         Abre tu terminal y ejecuta el siguiente comando para instalar Jupyter Notebooks utilizando pip:
                     </div>
                     <div class="comandos">
-                      <input type="text" class="text" value="pip install jupyterlab" oninput="ajustarAncho(this)">
+                      <input type="text" class="text" value="pip install jupyter notebook" oninput="ajustarAncho(this)">
                       <button><i class="fa fa-clone"></i><span> Copy</span></button>
                     </div>
                 </div>
@@ -67,7 +67,16 @@
                         Una vez instalado, puedes ejecutar Jupyter Notebooks ejecutando el siguiente comando en tu terminal:
                     </div>
                     <div class="comandos">
-                      <input type="text" class="text" value="jupyter-notebooks notebook.ipynb" oninput="ajustarAncho(this)">
+                      <input type="text" class="text" value="jupyter notebook" oninput="ajustarAncho(this)">
+                      <button><i class="fa fa-clone"></i><span> Copy</span></button>
+                    </div>
+                </div>
+                <div class="contenedor">
+                    <div class="etiqueta">
+                        Abre un archivo de Jupyter Notebook con la extensión '.ipynb':
+                    </div>
+                    <div class="comandos">
+                      <input type="text" class="text" value="jupyter-notebooks archivo.ipynb" oninput="ajustarAncho(this)">
                       <button><i class="fa fa-clone"></i><span> Copy</span></button>
                     </div>
                 </div>
