--- a/ia/pandas.html
+++ b/ia/pandas.html
@@ -117,7 +117,7 @@
                     <li><marcador class="resaltado8">OpenML:</marcador> OpenML es una plataforma que proporciona acceso a conjuntos de datos, herramientas y experimentos de Machine Learning. Ofrece una amplia gama de conjuntos de datos y permite a los usuarios compartir y colaborar en proyectos de Machine Learning.</li>
                 </ul>
                 <h2>Ejemplos</h2>
-                <p>Haz click <a href="https://github.com/Detective-Ryuzak1/Machine-Learnig-examples/blob/main/Pandas/Dragon_Ball_Pandas.ipynb">aquí</a> para ver algunos ejemplos de uso con librería Pandas utilizando un set de datos.</p>
+                <p>Haz click <a href="https://github.com/Detective-Ryuzak1/Machine-Learnig-examples/blob/main/Pandas/Dragon_Ball_Pandas.ipynb">aquí</a> para ver algunos ejemplos de uso con Pandas.</p>
                 <br>
                 <br>
             </div>  
