--- a/ia.html
+++ b/ia.html
@@ -66,6 +66,10 @@
             <img src="media/imagen3.png" alt="Pandas" class="article-image">
             <h2><a href="ia/pandas.html">Pandas</a></h2>
         </div>
+        <div class="article-section">
+            <img src="media/imagen3.png" alt="Numpy" class="article-image">
+            <h2><a href="ia/numpy.html">Numpy</a></h2>
+        </div>
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen3.png" alt="En proceso" class="article-image">
