--- a/ia/numpy.html
+++ b/ia/numpy.html
@@ -58,7 +58,7 @@
                 </ul>
                 <h2>Conclusión</h2>
                 <p>NumPy es una biblioteca fundamental en el ecosistema de Python para el procesamiento y análisis de datos numéricos. Su eficiencia, capacidad de cálculo vectorizado y amplio conjunto de funciones lo convierten en una herramienta indispensable para científicos de datos, ingenieros y cualquier persona que trabaje con datos numéricos en Python. Aunque Python ofrece listas como una estructura de datos versátil, NumPy ofrece ventajas significativas en términos de velocidad, eficiencia y funcionalidad para tareas relacionadas con el procesamiento de datos numéricos.</p>
-                <br>
+                <h2>Ejemplos</h2>
                 <p>Haz click <a href="https://github.com/Detective-Ryuzak1/Machine-Learnig-examples/blob/main/Numpy/Numpy.ipynb">aquí</a> para ver algunos ejemplos de uso con Numpy.</p>
                 <div class="blog-image-grande">
                     <img src="media/numpy2.jpg" alt="">
