--- a/network.html
+++ b/network.html
@@ -97,6 +97,10 @@
         <div class="article-section">
             <img src="media/imagen2.png" alt="DHCP" class="article-image">
             <h2><a href="network/dhcp.html">DHCP</a></h2>
+        </div> 
+        <div class="article-section">
+            <img src="media/imagen2.png" alt="Seguridad de Puertos" class="article-image">
+            <h2><a href="network/portsecurity.html">Seguridad de Puertos</a></h2>
         </div>   
         <!-- Nuevo artículo -->
         <div class="article-section">
