--- a/ia/numpy.html
+++ b/ia/numpy.html
@@ -56,6 +56,17 @@
                     <li><marcador class="resaltado2">Álgebra Lineal: </marcador>NumPy ofrece un conjunto completo de funciones para realizar operaciones de álgebra lineal, como cálculo de determinantes, inversas de matrices, descomposición de valores singulares (SVD), eigenvalores y eigenvectores, entre otros.</li>
                     <li><marcador class="resaltado2">Procesamiento de Imágenes y Señales: </marcador>NumPy es ampliamente utilizado en el procesamiento de imágenes y señales debido a su capacidad para manejar matrices multidimensionales de manera eficiente. La biblioteca ofrece funciones para cargar, manipular y analizar imágenes y señales de manera rápida y sencilla.</li>
                 </ul>
+                <h2>Instalación</h2>
+                <p>Numpy es una librería de Python que puede instalarse fácilmente utilizando pip, el gestor de paquetes de Python.</p>
+                <div class="contenedor">
+                    <div class="etiqueta">
+                        Abre tu terminal o línea de comandos y ejecuta el siguiente comando:
+                    </div>
+                    <div class="comandos">
+                      <input type="text" class="text" value="pip install pandas" oninput="ajustarAncho(this)">
+                      <button><i class="fa fa-clone"></i><span> Copy</span></button>
+                    </div>
+                </div>
                 <h2>Conclusión</h2>
                 <p>NumPy es una biblioteca fundamental en el ecosistema de Python para el procesamiento y análisis de datos numéricos. Su eficiencia, capacidad de cálculo vectorizado y amplio conjunto de funciones lo convierten en una herramienta indispensable para científicos de datos, ingenieros y cualquier persona que trabaje con datos numéricos en Python. Aunque Python ofrece listas como una estructura de datos versátil, NumPy ofrece ventajas significativas en términos de velocidad, eficiencia y funcionalidad para tareas relacionadas con el procesamiento de datos numéricos.</p>
                 <h2>Ejemplos</h2>
