--- a/ia.html
+++ b/ia.html
@@ -74,6 +74,10 @@
             <img src="media/imagen3.png" alt="Matplotlib" class="article-image">
             <h2><a href="ia/matplotlib.html">Matplotlib</a></h2>
         </div>
+        <div class="article-section">
+            <img src="media/imagen3.png" alt="Keras" class="article-image">
+            <h2><a href="ia/keras.html">Keras</a></h2>
+        </div>
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen3.png" alt="En proceso" class="article-image">
