--- a/ia/keras.html
+++ b/ia/keras.html
@@ -388,7 +388,7 @@
                     <img src="media/keras8.jpg" alt="">
                 </div> 
                 <p>Keras y TensorFlow ofrecen un ecosistema robusto y flexible para el desarrollo de modelos de aprendizaje profundo. Desde la construcción de redes neuronales hasta la optimización y el preprocesamiento de datos, estas herramientas proporcionan a los desarrolladores las herramientas necesarias para abordar una amplia gama de problemas en el campo del aprendizaje automático y la inteligencia artificial.</p>
-                <p>Haz click <a href="">aquí</a> para ver algunos ejemplos de uso con Keras.</p>
+                <p>Haz click <a href="https://github.com/Detective-Ryuzak1/Machine-Learnig-examples/blob/main/Keras/keras.ipynb">aquí</a> para ver algunos ejemplos de uso con Keras.</p>
                 <br>
                 <br>
             </div>  
