--- a/network.html
+++ b/network.html
@@ -101,7 +101,11 @@
         <div class="article-section">
             <img src="media/imagen2.png" alt="Seguridad de Puertos" class="article-image">
             <h2><a href="network/portsecurity.html">Seguridad de Puertos</a></h2>
-        </div>   
+        </div>  
+        <div class="article-section">
+            <img src="media/imagen2.png" alt="Enlaces de Agregación" class="article-image">
+            <h2><a href="network/enlace.html">Enlaces de Agregación</a></h2>
+        </div>  
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen2.png" alt="En proceso" class="article-image">
