--- a/network.html
+++ b/network.html
@@ -103,6 +103,10 @@
             <h2><a href="network/portsecurity.html">Seguridad de Puertos</a></h2>
         </div>  
         <div class="article-section">
+            <img src="media/imagen2.png" alt="Networking" class="article-image">
+            <h2><a href="network/networking.html">Conceptos básicos del Networking</a></h2>
+        </div> 
+        <div class="article-section">
             <img src="media/imagen2.png" alt="Enlaces de Agregación" class="article-image">
             <h2><a href="network/enlace.html">Enlaces de Agregación</a></h2>
         </div>  
