--- a/network.html
+++ b/network.html
@@ -104,7 +104,7 @@
         </div>  
         <div class="article-section">
             <img src="media/imagen2.png" alt="Networking" class="article-image">
-            <h2><a href="network/networking.html">Conceptos básicos del Networking</a></h2>
+            <h2><a href="network/networking.html">Conceptos Básicos del Networking</a></h2>
         </div> 
         <div class="article-section">
             <img src="media/imagen2.png" alt="Enlaces de Agregación" class="article-image">
