--- a/hacking.html
+++ b/hacking.html
@@ -69,7 +69,11 @@
         <div class="article-section">
             <img src="media/imagen4.png" alt="Anonimato" class="article-image">
             <h2><a href="hacking/anonimato.html">Anonimato</a></h2>
-        </div>    
+        </div> 
+        <div class="article-section">
+            <img src="media/imagen4.png" alt="Fases del Hacking" class="article-image">
+            <h2><a href="hacking/fases.html">Fases del Hacking</a></h2>
+        </div>   
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen4.png" alt="En proceso" class="article-image">
