--- a/network/networking.html
+++ b/network/networking.html
@@ -37,7 +37,7 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
-                <h1>Conceptos básicos del Networking</h1>
+                <h1>Conceptos Básicos del Networking</h1>
                 <p>El networking, en el contexto de la informática y las tecnologías de la información, se refiere a la práctica de conectar dispositivos y sistemas entre sí para facilitar la comunicación y el intercambio de recursos. El término abarca una amplia gama de actividades relacionadas con la creación, administración y mantenimiento de redes de computadoras, tanto a nivel local como global.</p>
                 <p>El networking puede tener diferentes propósitos y aplicaciones, que van desde compartir archivos e impresoras en una red local hasta acceder a recursos y servicios a través de Internet.</p>
                 <h2>Control de flujo y congestión</h2>
