--- a/hacking/windows.html
+++ b/hacking/windows.html
@@ -42,7 +42,7 @@
                 <p>La Command Prompt, o simplemente CMD, es una interfaz de línea de comandos que ha estado presente en Windows durante décadas. Aunque ha sido superada por PowerShell en términos de funcionalidad y versatilidad, aún es ampliamente utilizada y es útil para realizar tareas básicas en Windows.</p>
                 <h2>Diferencias Clave</h2>
                 <ul>
-                    <li><marcado        max-width: 100%;r class="resaltado8">Sintaxis:</marcador> PowerShell utiliza un enfoque de "verbo-sustantivo" para sus comandos, lo que hace que la sintaxis sea más coherente y legible en comparación con CMD.</li>
+                    <li><marcador class="resaltado8">Sintaxis:</marcador> PowerShell utiliza un enfoque de "verbo-sustantivo" para sus comandos, lo que hace que la sintaxis sea más coherente y legible en comparación con CMD.</li>
                     <li><marcador class="resaltado8">Capacidad de scripting:</marcador> PowerShell es más adecuado para la creación de scripts avanzados y la automatización de tareas.</li>
                     <li><marcador class="resaltado8">Soporte para .NET:</marcador> PowerShell ofrece acceso completo al marco de trabajo .NET, lo que permite una mayor funcionalidad y flexibilidad.</li>
                 </ul>
