--- a/ia/numpy.html
+++ b/ia/numpy.html
@@ -63,7 +63,7 @@
                         Abre tu terminal o línea de comandos y ejecuta el siguiente comando:
                     </div>
                     <div class="comandos">
-                      <input type="text" class="text" value="pip install pandas" oninput="ajustarAncho(this)">
+                      <input type="text" class="text" value="pip install numpy" oninput="ajustarAncho(this)">
                       <button><i class="fa fa-clone"></i><span> Copy</span></button>
                     </div>
                 </div>
