--- a/hacking/linux2.html
+++ b/hacking/linux2.html
@@ -137,20 +137,20 @@
                 <h2>Diferencias y Ventajas</h2>
                 <p>Cada método de instalación de Linux tiene sus propias características y ventajas. A continuación, detallamos las diferencias entre usar máquinas virtuales, particiones de disco y un USB booteable, junto con las ventajas específicas de la partición y las precauciones al usar un USB booteable:</p>
                 <ul style="list-style-type: square;">
-                    <li><marcador class="resaltado8">Máquinas Virtuales:</marcador></li>
+                    <li><marcador class="resaltado9">Máquinas Virtuales:</marcador></li>
                     <ul>
-                        <li>Diferencias: Las máquinas virtuales (VMs) permiten ejecutar un sistema operativo dentro de otro. No afectan el sistema anfitrión y brindan un entorno aislado para probar Linux. La instalación se realiza en un archivo virtual, lo que facilita la eliminación o la duplicación.</li>
-                        <li>Ventajas: No se modifican las particiones del sistema anfitrión, lo que garantiza la seguridad y evita conflictos con otros sistemas operativos. Puedes experimentar con múltiples distribuciones de Linux sin comprometer la estabilidad del sistema principal.</li>
+                        <li><marcador class="resaltado8">Diferencias: </marcador>Las máquinas virtuales (VMs) permiten ejecutar un sistema operativo dentro de otro. No afectan el sistema anfitrión y brindan un entorno aislado para probar Linux. La instalación se realiza en un archivo virtual, lo que facilita la eliminación o la duplicación.</li>
+                        <li><marcador class="resaltado8">Ventajas: </marcador>No se modifican las particiones del sistema anfitrión, lo que garantiza la seguridad y evita conflictos con otros sistemas operativos. Puedes experimentar con múltiples distribuciones de Linux sin comprometer la estabilidad del sistema principal.</li>
                     </ul>
-                    <li><marcador class="resaltado8">Particiones de Disco:</marcador></li>
+                    <li><marcador class="resaltado9">Particiones de Disco:</marcador></li>
                     <ul>
-                        <li>Diferencias: La instalación en particiones de disco crea una instalación nativa en una partición del disco duro. Puede ser un proceso más involucrado, ya que requiere la reorganización del espacio en disco y la configuración de particiones.</li>
-                        <li>Ventajas: Obtienes un rendimiento óptimo, ya que Linux se ejecuta directamente en el hardware. Tienes acceso completo a los recursos del sistema y no estás limitado por la capa de virtualización. Puedes configurar tu sistema para que Linux sea el sistema operativo principal.</li>
+                        <li><marcador class="resaltado8">Diferencias: </marcador>La instalación en particiones de disco crea una instalación nativa en una partición del disco duro. Puede ser un proceso más involucrado, ya que requiere la reorganización del espacio en disco y la configuración de particiones.</li>
+                        <li><marcador class="resaltado8">Ventajas: </marcador>Obtienes un rendimiento óptimo, ya que Linux se ejecuta directamente en el hardware. Tienes acceso completo a los recursos del sistema y no estás limitado por la capa de virtualización. Puedes configurar tu sistema para que Linux sea el sistema operativo principal.</li>
                     </ul>
-                    <li><marcador class="resaltado8">USB:</marcador></li>
+                    <li><marcador class="resaltado9">USB:</marcador></li>
                     <ul>
-                        <li>Diferencias: Instalar Linux desde un USB booteable implica arrancar tu computadora directamente desde el USB. No requiere particionar el disco duro.</li>
-                        <li>Ventajas: Puedes probar Linux antes de comprometerte a una instalación permanente. Ideal para sistemas que no deseas modificar o que no te pertenecen. Es una forma de llevar tu sistema operativo y tus datos a cualquier lugar y ejecutarlo en diferentes computadoras y, al ejecutar tu sistema desde una unidad USB, evitas dejar rastros en la máquina anfitriona y tus datos quedan en la USB.También en una USB no afectará al sistema anfitrión, lo que es especialmente útil para probar diferentes distribuciones o entornos sin comprometer la instalación existente.</li>
+                        <li><marcador class="resaltado8">Diferencias: </marcador>Instalar Linux desde un USB booteable implica arrancar tu computadora directamente desde el USB. No requiere particionar el disco duro.</li>
+                        <li><marcador class="resaltado8">Ventajas: </marcador>Puedes probar Linux antes de comprometerte a una instalación permanente. Ideal para sistemas que no deseas modificar o que no te pertenecen. Es una forma de llevar tu sistema operativo y tus datos a cualquier lugar y ejecutarlo en diferentes computadoras y, al ejecutar tu sistema desde una unidad USB, evitas dejar rastros en la máquina anfitriona y tus datos quedan en la USB.También en una USB no afectará al sistema anfitrión, lo que es especialmente útil para probar diferentes distribuciones o entornos sin comprometer la instalación existente.</li>
                     </ul>
                 </ul>
                 <br>
