--- a/electronica/inductancia.html
+++ b/electronica/inductancia.html
@@ -67,16 +67,16 @@
                     <li><marcador class="resaltado6">Dimensiones y encapsulado:</marcador> Las dimensiones físicas y el encapsulado del inductor son importantes para la integración en tu diseño. Asegúrate de que el inductor se adapte al espacio disponible y a la placa de circuito.</li>
                     <li><marcador class="resaltado6">Aplicación específica:</marcador> Determina si tu inductor se utilizará en aplicaciones de filtrado, almacenamiento de energía, reducción de ruido u otras aplicaciones específicas. Esto influirá en las especificaciones que debes buscar en un inductor.</li>
                     <li><marcador class="resaltado6">Valor de inductancia (L):</marcador> El valor de inductancia es una medida de la capacidad del inductor para almacenar energía en forma de campo magnético cuando una corriente pasa a través de él. Debes seleccionar un inductor con el valor de inductancia adecuado para tu aplicación.</li>
-                    <ol>
-                        <li><marcador class="resaltado">Fórmula para inductancia de un inductor con núcleo de hierro o ferrita:</marcador> Si el inductor tiene un núcleo de material ferromagnético (como hierro o ferrita), la fórmula para calcular la inductancia es más compleja y depende de la geometría del núcleo. En este caso, se utilizan ecuaciones específicas y tablas de datos proporcionados por los fabricantes de inductores o herramientas de diseño de inductores disponibles en línea.</li>
-                        <li><marcador class="resaltado">Simulación y software de diseño:</marcador> Para inductores más complejos con núcleos específicos o diseños personalizados, a menudo es necesario recurrir a simulaciones con software de diseño de inductores. Estas herramientas de software pueden proporcionar resultados más precisos y tener en cuenta factores como la reluctancia del núcleo, la saturación magnética y otros efectos no lineales.</li>
-                        <li><marcador class="resaltado">Valores estándar:</marcador> En la práctica, los inductores comerciales están disponibles en valores estándar de inductancia, y es posible seleccionar uno que se ajuste a las necesidades del diseño sin necesidad de calcularlo desde cero.</li>
-                    </ol>
                 </ul>
                 <div class="blog-image-doble">
                     <img src="media/inductor5.jpg" alt="">
                     <img src="media/inductor6.jpg" alt="">
                 </div>
+                <ol>
+                    <li><marcador class="resaltado8">Fórmula para inductancia de un inductor con núcleo de hierro o ferrita:</marcador> Si el inductor tiene un núcleo de material ferromagnético (como hierro o ferrita), la fórmula para calcular la inductancia es más compleja y depende de la geometría del núcleo. En este caso, se utilizan ecuaciones específicas y tablas de datos proporcionados por los fabricantes de inductores o herramientas de diseño de inductores disponibles en línea.</li>
+                    <li><marcador class="resaltado8">Simulación y software de diseño:</marcador> Para inductores más complejos con núcleos específicos o diseños personalizados, a menudo es necesario recurrir a simulaciones con software de diseño de inductores. Estas herramientas de software pueden proporcionar resultados más precisos y tener en cuenta factores como la reluctancia del núcleo, la saturación magnética y otros efectos no lineales.</li>
+                    <li><marcador class="resaltado8">Valores estándar:</marcador> En la práctica, los inductores comerciales están disponibles en valores estándar de inductancia, y es posible seleccionar uno que se ajuste a las necesidades del diseño sin necesidad de calcularlo desde cero.</li>
+                </ol>
                 <h2>Aplicaciones</h2>
                 <p>Los inductores tienen una amplia gama de aplicaciones en la electrónica y otras áreas de la tecnología. Algunos usos comunes incluyen:</p>
                 <ul>
