--- a/network/portsecurity.html
+++ b/network/portsecurity.html
@@ -44,14 +44,14 @@
                 <div class="blog-image-grande">
                     <img src="media/portsecurity2.png" alt="">
                 </div>
-                <h2>Soluciones de seguridad de puerto de Cisco</h2>
+                <h2>Configuración de Port Security</h2>
+                <h3>Cisco</h3>
                 <p>Cisco es uno de los líderes en el mercado de equipos de red y ofrece una variedad de soluciones de seguridad de puerto a través de su suite de productos IOS (Internetwork Operating System) y IOS-XE. Algunas de las características clave de seguridad de puerto ofrecidas por Cisco incluyen:</p>
                 <ul>
                     <li><marcador class="resaltado8">Port Security: </marcador>Esta característica permite a los administradores de red limitar el número de dispositivos que pueden conectarse a un puerto específico. Se pueden configurar políticas para permitir solo dispositivos autorizados por dirección MAC o por tipo de dispositivo.</li>
                     <li><marcador class="resaltado8">IEEE 802.1X Authentication: </marcador>Cisco ofrece soporte para IEEE 802.1X, un estándar de autenticación de puerto basado en el Protocolo de Autenticación EAP (Extensible Authentication Protocol). Con 802.1X, los dispositivos deben autenticarse antes de que se les permita acceder a la red.</li>
                     <li><marcador class="resaltado8">Dynamic ARP Inspection (DAI): </marcador>DAI es una característica de seguridad que ayuda a prevenir los ataques de envenenamiento de ARP al validar los paquetes ARP entrantes y descartar aquellos que no cumplen con ciertos criterios de seguridad.</li>
                 </ul>
-                <h2>Configuración en equipos Cisco</h2>
                 <p>Configurar la seguridad de puerto en dispositivos Cisco es una tarea relativamente sencilla y se puede lograr utilizando la interfaz de línea de comandos (CLI) de los dispositivos Cisco IOS. A continuación, te proporcionaré una guía básica para configurar la seguridad de puerto en un switch Cisco.</p>
                 <ol>
                     <li><marcador class="resaltado9">Acceder al modo de configuración del switch: </marcador>Primero, accede al switch Cisco utilizando un programa de emulación de terminal como PuTTY o a través de una conexión de consola directa.</li>
@@ -84,7 +84,7 @@ Switch# show port-security address   // Muestra las direcciones MAC seguras apre
 Switch# copy running-config startup-config</code></pre>
                     </div>
                 </div>
-                <h3>Opciones</h3>
+                <h4>Opciones</h4>
                 <p>Cuando se configura un puerto como "modo de acceso", significa que el puerto será parte de una sola VLAN y no realizará etiquetado de tráfico IEEE 802.1Q (trunking). Esto es útil cuando se conectan dispositivos finales, como computadoras o impresoras, que no necesitan enviar tráfico de múltiples VLAN a través del puerto.</p>
                 <p>El comando <marcador class="subrayado">switchport port-security violation</marcador> se utiliza en dispositivos de red como switches Ethernet para configurar la acción que se tomará cuando se detecte una violación de seguridad en un puerto configurado con seguridad de puerto. Esta configuración específica establece que cuando se detecte una violación de seguridad en el puerto, se tomarán medidas para restringir el tráfico.</p>
                 <ul>
@@ -95,14 +95,13 @@ Switch# copy running-config startup-config</code></pre>
                 </ul>
                 <p>Si deseas agregar manualmente una dirección MAC a la lista, puedes hacerlo utilizando el comando <marcador class="subrayado">switchport port-security mac-address sticky &lt;dirección_MAC&gt;</marcador>.</p>
                 <p>El comando <marcador class="subrayado">switchport port-security aging time</marcador>, establece el tiempo de envejecimiento para la seguridad de puertos en un switch Cisco. Este comando establece la cantidad de tiempo que una dirección MAC aprendida permanece en la tabla de direcciones antes de ser eliminada si no se ha vuelto a detectar en el puerto.</p>
-                <h2>Soluciones de seguridad de puerto de Huawei</h2>
+                <h3>Huawei</h3>
                 <p>Huawei, otro gigante en el espacio de la red, también ofrece una variedad de funciones de seguridad de puerto en sus dispositivos. Algunas de las características destacadas son:</p>
                 <ul>
                     <li><marcador class="resaltado8">Port Security: </marcador>Similar a la solución de Cisco, Huawei proporciona capacidades de seguridad de puerto que permiten a los administradores de red limitar el acceso a los dispositivos autorizados basados en direcciones MAC.</li>
                     <li><marcador class="resaltado8">MACsec (Media Access Control Security): </marcador>Huawei ofrece soporte para MACsec, un estándar de seguridad de capa 2 que proporciona cifrado de tráfico entre dispositivos conectados a través de enlaces Ethernet.</li>
                     <li><marcador class="resaltado8">IP Source Guard: </marcador>Esta función ayuda a mitigar los ataques de spoofing de IP al restringir el tráfico entrante en un puerto a direcciones IP específicas autorizadas.</li>
                 </ul>
-                <h2>Configuración en equipos Huawei</h2>
                 <p>Para configurar la seguridad de puerto (Port Security) en equipos Huawei, generalmente se utiliza la interfaz de línea de comandos (CLI) de los dispositivos. A continuación, te proporcionaré los pasos generales para configurar Port Security en un switch Huawei:</p>
                 <ol>
                     <li><marcador class="resaltado9">Accede al dispositivo: </marcador>Inicia sesión en el switch Huawei a través de la interfaz de línea de comandos (CLI) utilizando un software de terminal como PuTTY o directamente desde la consola de gestión.</li>
@@ -118,7 +117,7 @@ Switch# copy running-config startup-config</code></pre>
                     </div>
                     <div class="codigo-consola">
                         <!-- Contenido del código -->
-                        <pre><code><switch>system-view
+                        <pre><code>&lt;Switch&gt; system-view
 [Switch] interface gigabitethernet 0/0/1
 [Switch-GigabitEthernet0/0/1] port-security enable
 [Switch-GigabitEthernet0/0/1] port-security mac-address sticky  // Configura el aprendizaje automático de direcciones MAC 
